--- a/example/hybconfig.toml
+++ b/example/hybconfig.toml
@@ -1,4 +1,11 @@
-ProjectName = "example"
-EntryPoint = "/example.hyb"
-OutputDirectory = "/"
-Target = "ppl"
+[level]
+name = "Example Level"
+description = "This is an example level created using Hybroid"
+information = "https://github.com/pewpewlive/hybroid"
+entry_point = "example.hyb"
+casual = false
+medal_requirements = { bronze = 100, silver = 200, gold = 400 }
+
+[project]
+output_directory = "out"
+target = "ppl"
