multiple file transpilation working
Co-authored-by: MnHs <RanPix@users.noreply.github.com>
Co-authored-by: Salvijus K. <SKPG-Tech@users.noreply.github.com>

--- a/example/hybconfig.toml
+++ b/example/hybconfig.toml
@@ -1,9 +1,9 @@
 [level]
 name = "Example Level"
-descriptions = ["This is an example level created using Hybroid"]
+descriptions = [ "This is an example level created using Hybroid" ]
 information = "https://github.com/pewpewlive/hybroid"
 entry_point = "example.hyb"
-casual = false
+casual = true
 medal_requirements = { bronze = 100, silver = 200, gold = 400 }
 
 [project]
