--- a/.gitignore
+++ b/.gitignore
@@ -8,20 +8,20 @@
 *.so
 *.dylib
 
-example/out
-
 # Test binary, built with `go test -c`
 *.test
 
 # Output of the go coverage tool, specifically when used with LiteIDE
 *.out
 
-# Dependency directories (remove the comment below to include it)
-# vendor/
-
 # Go workspace file
 go.work
 
-
-# vscode
+# VSCode
 .vscode
+
+# Python
+__pycache__
+
+# Hybroid generated files 
+example/out
