--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -1,21 +1,17 @@
-# This workflow will build a golang project
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-go
-
 name: Go
-
 on:
   push:
     branches: [ "master" ]
+    paths: [ "**.go", "**.hyb" ]
   pull_request:
     branches: [ "master" ]
+    paths: [ "**.go", "**.hyb" ]
 
 jobs:
-
-  build:
+  validate:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v4
-
     - name: Set up Go
       uses: actions/setup-go@v4
       with:
